--- a/admin/index.html
+++ b/admin/index.html
@@ -12,13 +12,16 @@
   <h1 id="galleryTitle">Admin - Leila's Photography Gallery</h1>
 
   <!-- Back Button -->
-  <div class="back-button" id="backButton" style="display: none;">← Back to Albums</div>
+  <button id="backButton" class="back-button back-button-hidden">← Back to Albums</button>
 
   <!-- Upload Section -->
   <div class="upload-section" style="display:none;" id="uploadSection">
     <input type="file" id="fileInput" />
     <button id="uploadButton">Upload to Album</button>
+    <div class="spinner" id="spinner"></div>
   </div>
+
+  <p id="status"></p>
 
   <!-- Image Gallery Section -->
   <div class="gallery" id="gallery"></div>
@@ -30,7 +33,6 @@
     const backButton = document.getElementById('backButton');
     const titleElement = document.getElementById('galleryTitle');
     const fileInput = document.getElementById('fileInput');
-    const uploadButton = document.getElementById('uploadButton');
     let currentAlbum = '';
 
     async function openAlbum(albumName) {
@@ -49,21 +51,42 @@
       const galleryDiv = document.getElementById('gallery');
       galleryDiv.innerHTML = '';  // Clear current gallery
 
+      // Fetch metadata from the images table to get file types
+      const { data: metadata, error: metaError } = await supabase
+        .from('images')
+        .select('id, image_name, type, likes')
+        .eq('album_name', albumName);
+
+      if (metaError) {
+        console.error('Error fetching image metadata:', metaError);
+        return;
+      }
+
       images.forEach(async (file) => {
         const publicURL = supabase.storage.from(bucket).getPublicUrl(`${albumName}/${file.name}`).data.publicUrl;
+        const meta = metadata.find(m => m.image_name === file.name);
+        const fileType = meta ? meta.type : 'unknown';  // Use the type from the database
 
-        // Create an image item with .album-cover styling
         const imageItem = document.createElement('div');
         imageItem.classList.add('album-cover');  // Reuse the album cover class for consistency
 
-        const imgElement = document.createElement('img');
-        imgElement.src = publicURL;
+        // Differentiate between rendering an image or a video
+        if (fileType === 'image') {
+          const imgElement = document.createElement('img');
+          imgElement.src = publicURL;
+          imageItem.appendChild(imgElement);
+        } else if (fileType === 'video') {
+          const videoElement = document.createElement('video');
+          videoElement.src = publicURL;
+          videoElement.controls = true;  // Add video controls (play/pause, etc.)
+          videoElement.style.width = '100%';  // Make video fit the container
+          imageItem.appendChild(videoElement);
+        }
 
         // Add the delete button and likes section as a div inside the image container
         const infoElement = document.createElement('div');
         infoElement.innerHTML = `<button onclick="deleteImage('${albumName}/${file.name}')">🗑️</button>`;
 
-        imageItem.appendChild(imgElement);
         imageItem.appendChild(infoElement);
 
         // Add right-click and long-press delete functionality
@@ -77,62 +100,121 @@
       document.getElementById('uploadSection').style.display = 'block';
     }
 
-    // Back to the main gallery (albums) view
-    document.getElementById('backButton').addEventListener('click', () => {
-      document.getElementById('uploadSection').style.display = 'none';  // Hide the upload section when showing albums
-      document.getElementById('backButton').style.display = 'none';     // Hide the back button when showing albums
-      galleryDiv.innerHTML = '';  // Clear existing content
-      backButton.style.display = 'none';  // Hide back button on main page
-      fetchFolders(galleryDiv, titleElement, backButton, openAlbum);  // Call fetchFolders with the necessary parameters
+    backButton.addEventListener('click', () => {
+      fetchFolders(galleryDiv, titleElement, backButton, openAlbum);  // Fetch albums (folders) view
+      document.getElementById('uploadSection').style.display = 'none';  // Hide upload section when showing albums
+      backButton.classList.add('back-button-hidden');  // Hide the back button
+      history.pushState(null, null, window.location.pathname);  // Update browser history
     });
 
+    // Handle browser back button (popstate event)
+    window.addEventListener('popstate', () => {
+      // Trigger the same back button behavior as if clicking "Back to Albums"
+      fetchFolders(galleryDiv, titleElement, backButton, openAlbum);
+      document.getElementById('uploadSection').style.display = 'none';  // Hide upload section
+      backButton.classList.add('back-button-hidden');  // Hide the back button
+    });
+
+    // Upload button functionality
+    const uploadButton = document.getElementById('uploadButton');
+    const spinner = document.getElementById('spinner');
+    const statusElement = document.getElementById('status');
+
     uploadButton.addEventListener('click', async () => {
+      const fileInput = document.getElementById('fileInput');
       const file = fileInput.files[0];
+
       if (file && currentAlbum) {
-        const { error } = await supabase.storage.from(bucket).upload(`${currentAlbum}/${file.name}`, file);
-        if (error) {
-          console.error('Upload failed:', error);
+        const fileName = file.name;
+        const fileExtension = fileName.split('.').pop().toLowerCase();
+
+        // Determine the file type based on the file extension
+        const fileType = fileExtension.match(/(jpg|jpeg|png|gif)$/i) ? 'image' :
+          fileExtension.match(/(mp4|mov|webm)$/i) ? 'video' : 'unknown';
+
+        if (fileType === 'unknown') {
+          alert('Unsupported file type!');
           return;
         }
 
-        // Insert into the images table
-        const { error: insertError } = await supabase
-          .from('images')
-          .insert({
-            image_name: file.name,
-            album_name: currentAlbum,
-            storage_path: `${currentAlbum}/${file.name}`,
-            likes: 0,
-          });
+        // Show spinner and disable upload button
+        spinner.style.display = 'inline-block';
+        uploadButton.disabled = true;
+        statusElement.textContent = "Uploading file...";
 
-        if (insertError) {
-          console.error('Error inserting into images table:', insertError);
-        } else {
-          openAlbum(currentAlbum);  // Refresh the album
+        try {
+          // Upload file to Supabase storage
+          const { error: uploadError } = await supabase.storage
+            .from(bucket)
+            .upload(`${currentAlbum}/${fileName}`, file);
+
+          if (uploadError) {
+            console.error('Upload failed:', uploadError);
+            alert('Error uploading the file.');
+            return;
+          }
+
+          // Insert file metadata into the 'images' table
+          const { error: insertError } = await supabase
+            .from('images')
+            .insert({
+              image_name: fileName,
+              album_name: currentAlbum,
+              storage_path: `${currentAlbum}/${fileName}`,
+              type: fileType,
+              likes: 0  // Initialize with zero likes
+            });
+
+          if (insertError) {
+            console.error('Error inserting file metadata:', insertError);
+            alert('Error saving file details to the database.');
+          } else {
+            alert(`File uploaded and added to the database successfully as ${fileType}.`);
+            openAlbum(currentAlbum);  // Refresh the album to show the new file
+          }
+        } catch (error) {
+          console.error('Error during upload:', error);
+          alert('Unexpected error during upload.');
+        } finally {
+          // Hide spinner and re-enable upload button
+          spinner.style.display = 'none';
+          uploadButton.disabled = false;
+          statusElement.textContent = '';
         }
+      } else {
+        alert('Please select a file and ensure an album is open.');
       }
     });
 
     // Function to delete an image from the album
     async function deleteImage(fileName) {
-      const { error } = await supabase.storage.from(bucket).remove([fileName]);
+      // Show confirmation dialog
+      const confirmDelete = confirm("Are you sure you want to delete this file?");
 
-      if (error) {
-        console.error('Error deleting image:', error);
-        alert('Error deleting image!');
-      } else {
-        // Remove from the "images" table in Supabase
-        const { error: deleteError } = await supabase
-          .from('images')
-          .delete()
-          .eq('storage_path', fileName);
+      // If user confirms the deletion
+      if (confirmDelete) {
+        const { error } = await supabase.storage.from(bucket).remove([fileName]);
 
-        if (deleteError) {
-          console.error('Error deleting image metadata:', deleteError);
+        if (error) {
+          console.error('Error deleting image:', error);
+          alert('Error deleting image!');
         } else {
-          //alert('Image deleted successfully!');
-          openAlbum(currentAlbum);  // Refresh the album after deletion
+          // Remove from the "images" table in Supabase
+          const { error: deleteError } = await supabase
+            .from('images')
+            .delete()
+            .eq('storage_path', fileName);
+
+          if (deleteError) {
+            console.error('Error deleting image metadata:', deleteError);
+          } else {
+            alert('Image deleted successfully!');
+            openAlbum(currentAlbum);  // Refresh the album after deletion
+          }
         }
+      } else {
+        // If user cancels the deletion, do nothing
+        console.log('Deletion cancelled by user.');
       }
     }
 
