--- a/admin/index.html
+++ b/admin/index.html
@@ -21,6 +21,12 @@
     <div class="spinner" id="spinner"></div>
   </div>
 
+  <div id="newAlbumSection" class="upload-section">
+    <input type="text" id="newAlbumName" placeholder="Enter new album name" />
+    <button id="createAlbumButton">Create Album</button>
+    <div class="spinner" id="albumSpinner"></div>
+  </div>
+
   <p id="status"></p>
 
   <!-- Image Gallery Section -->
@@ -37,6 +43,7 @@
 
     async function openAlbum(albumName) {
       currentAlbum = albumName;
+      newAlbumSection.style.display = 'none';
 
       // Fetch images for the album and render them
       const { data: images, error } = await supabase.storage
@@ -101,6 +108,7 @@
     }
 
     backButton.addEventListener('click', () => {
+      newAlbumSection.style.display = 'flex';
       fetchFolders(galleryDiv, titleElement, backButton, openAlbum);  // Fetch albums (folders) view
       document.getElementById('uploadSection').style.display = 'none';  // Hide upload section when showing albums
       backButton.classList.add('back-button-hidden');  // Hide the back button
@@ -114,6 +122,70 @@
       document.getElementById('uploadSection').style.display = 'none';  // Hide upload section
       backButton.classList.add('back-button-hidden');  // Hide the back button
     });
+
+    // Placeholder image for new albums
+    const placeholderImageURL = 'album_placeholder.jpeg';
+
+    const createAlbumButton = document.getElementById('createAlbumButton');
+    const newAlbumNameInput = document.getElementById('newAlbumName');
+    const albumSpinner = document.getElementById('albumSpinner');
+
+    createAlbumButton.addEventListener('click', async () => {
+      const newAlbumName = newAlbumNameInput.value.trim();
+
+      if (!newAlbumName) {
+        alert('Please enter a valid album name.');
+        return;
+      }
+
+      // Show spinner while creating the album
+      albumSpinner.style.display = 'inline-block';
+      createAlbumButton.disabled = true;
+
+      try {
+        // Attempt to create a new "album" (folder) in Supabase storage
+        const { error: createError } = await supabase.storage
+          .from(bucket)
+          .upload(`${newAlbumName}/.placeholder`, new Blob([]));  // Create an empty folder with a placeholder file
+
+        if (createError) {
+          console.error('Error creating new album:', createError);
+          alert('Error creating new album.');
+          return;
+        }
+
+        // Display the new album with the placeholder image
+        const albumCover = document.createElement('div');
+        albumCover.classList.add('album-cover');
+
+        const imgElement = document.createElement('img');
+        imgElement.src = placeholderImageURL;  // Use the placeholder image
+
+        const titleElement = document.createElement('div');
+        titleElement.classList.add('album-title');
+        titleElement.textContent = newAlbumName;
+
+        albumCover.appendChild(imgElement);
+        albumCover.appendChild(titleElement);
+
+        // Add click event to open album view
+        albumCover.addEventListener('click', () => openAlbum(newAlbumName));
+
+        // Append the new album to the gallery
+        document.getElementById('gallery').appendChild(albumCover);
+
+        alert('Album created successfully!');
+      } catch (error) {
+        console.error('Unexpected error creating album:', error);
+        alert('Error creating album.');
+      } finally {
+        // Hide spinner and re-enable button
+        albumSpinner.style.display = 'none';
+        createAlbumButton.disabled = false;
+        newAlbumNameInput.value = '';  // Clear the input
+      }
+    });
+
 
     // Upload button functionality
     const uploadButton = document.getElementById('uploadButton');
@@ -140,10 +212,32 @@
         // Show spinner and disable upload button
         spinner.style.display = 'inline-block';
         uploadButton.disabled = true;
-        statusElement.textContent = "Uploading file...";
 
         try {
-          // Upload file to Supabase storage
+          // Check if the .placeholder file exists and delete it
+          const { data: filesInAlbum, error: listError } = await supabase.storage
+            .from(bucket)
+            .list(currentAlbum);
+
+          if (listError) {
+            console.error('Error fetching album files:', listError);
+            return;
+          }
+
+          // If there's a .placeholder file, delete it before uploading the real file
+          if (filesInAlbum.find(file => file.name === '.placeholder')) {
+            const { error: deleteError } = await supabase.storage
+              .from(bucket)
+              .remove([`${currentAlbum}/.placeholder`]);
+
+            if (deleteError) {
+              console.error('Error deleting placeholder file:', deleteError);
+            } else {
+              console.log('Placeholder file deleted successfully.');
+            }
+          }
+
+          // Upload the real file to Supabase storage
           const { error: uploadError } = await supabase.storage
             .from(bucket)
             .upload(`${currentAlbum}/${fileName}`, file);
@@ -179,7 +273,6 @@
           // Hide spinner and re-enable upload button
           spinner.style.display = 'none';
           uploadButton.disabled = false;
-          statusElement.textContent = '';
         }
       } else {
         alert('Please select a file and ensure an album is open.');
@@ -246,7 +339,10 @@
     }
 
 
-    window.onload = () => fetchFolders(galleryDiv, titleElement, backButton, openAlbum);
+    window.onload = () => {
+      fetchFolders(galleryDiv, titleElement, backButton, openAlbum);
+      newAlbumSection.style.display = 'flex'; // Re-show album creation section}
+    }
     window.deleteImage = deleteImage;  // Expose deleteImage globally
   </script>
 </body>
