added overlay back

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <!-- Image Gallery Section -->
   <div class="gallery" id="gallery"></div>
 
+  <!-- Full-screen overlay for displaying media -->
+<div id="mediaOverlay" class="media-overlay">
+  <span id="closeOverlay" class="close-overlay">&times;</span>
+  <div id="overlayContent" class="overlay-content">
+      <!-- The media (image or video) will be injected here -->
+  </div>
+</div>
+
+
   <script type="module">
     import { fetchFolders, fetchAlbumImages, likeImage } from './gallery.js';
 
